[gd_scene load_steps=8 format=2]

[ext_resource path="res://TemporalAssets/kenney_spaceshooterextension/PNG/Sprites/Station/spaceStation_020.png" type="Texture" id=1]
[ext_resource path="res://Juego/EstacionRecarga/AreaAtraccion.tscn" type="PackedScene" id=2]
[ext_resource path="res://Juego/EstacionRecarga/EstacionEspacialRecarga.gd" type="Script" id=3]
[ext_resource path="res://Juego/EstacionRecarga/SFX_Recarga.ogg" type="AudioStream" id=4]
[ext_resource path="res://Juego/EstacionRecarga/SFX_Estacionvacia.ogg" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "EstacionGirando"
length = 30.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColisionJugador:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 15, 30 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 360.0, 0.0, -360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaRecarga:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 7.5, 15, 22.5, 30 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaRecarga:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 7.5, 15, 22.5, 30 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.501961 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.5 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "default"

[node name="EstacionEspacialRecarga" type="Node2D"]
scale = Vector2( 1.5, 1.5 )
z_index = 5
z_as_relative = false
script = ExtResource( 3 )

[node name="AreaColisionJugador" type="Area2D" parent="."]
rotation = 6.28319
collision_layer = 64
collision_mask = 2

[node name="SpriteEstacion" type="Sprite" parent="AreaColisionJugador"]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AreaColisionJugador"]
polygon = PoolVector2Array( -36.8126, -142.391, -1.32056, -164.11, 38.4093, -145.039, 27.4644, -95.0948, 1.99313, 172.353, -30.2205, -97.3422 )

[node name="AreaRecarga" parent="." instance=ExtResource( 2 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "EstacionGirando"
anims/EstacionGirando = SubResource( 1 )
anims/default = SubResource( 2 )

[node name="SFX_EstacionVacia" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 5 )
bus = "SFX"

[node name="SFX_Recarga" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[connection signal="body_entered" from="AreaColisionJugador" to="." method="_on_AreaColisionJugador_body_entered"]
[connection signal="body_entered" from="AreaRecarga" to="." method="_on_AreaRecarga_body_entered"]
[connection signal="body_exited" from="AreaRecarga" to="." method="_on_AreaRecarga_body_exited"]
